# gy-doc-search

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/gy_doc_search/: __init__.py  chunker.py  cli.py  config.py  defaults.py  embedder.py  eval.py  indexer.py  mcp_server.py  models.py  searcher.py  storage.py
src/gy_doc_search/templates/: claude_md.j2  config.yaml.j2  gitignore.j2
tests/: conftest.py  sample_eval_cases.yaml  test_chunker.py  test_cli.py  test_config.py  test_eval.py  test_indexer.py  test_searcher.py  test_storage.py
tests/sample_docs/: large_sections.md  nested_headings.md  no_headings.md  simple.md  unicode_content.md  with_code_blocks.md  with_frontmatter.md
